syntax = "proto3";

option csharp_namespace = "Proto";

message Achievement {
  enum Status {
    INVALID = 0;
    UNFINISHED = 1;
    FINISHED = 2;
    REWARD_TAKEN = 3;
  }
  uint32 timestamp = 15;
  uint32 current = 5;
  uint32 total = 14;
  uint32 id = 3;
  Status status = 10;
}

message AchievementAllDataNotify {
    repeated Achievement list = 4;
}
